// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Parser > error exit outside conditional 1`] = `
[
  {
    "level": "error",
    "message": "Exit action can only be used in conditionals",
    "span": {
      "end": 4,
      "start": 0,
    },
  },
]
`;

exports[`Parser > error invalid stat actions 1`] = `
[
  {
    "level": "error",
    "message": "Expected stat name",
    "span": {
      "end": 6,
      "start": 5,
    },
  },
  {
    "level": "error",
    "message": "Expected amount",
    "span": {
      "end": 27,
      "start": 18,
    },
  },
  {
    "level": "error",
    "message": "Expected operation",
    "span": {
      "end": 36,
      "start": 35,
    },
  },
  {
    "level": "error",
    "message": "Expected stat name",
    "span": {
      "end": 41,
      "start": 41,
    },
  },
]
`;

exports[`Parser > error invalid stat names 1`] = `
[
  {
    "level": "error",
    "message": "Stat name exceeds 16-character limit",
    "span": {
      "end": 23,
      "start": 5,
    },
  },
  {
    "level": "error",
    "message": "Stat name cannot be empty",
    "span": {
      "end": 35,
      "start": 33,
    },
  },
  {
    "level": "error",
    "message": "Stat name cannot contain spaces",
    "span": {
      "end": 58,
      "start": 46,
    },
  },
]
`;

exports[`Parser > error limits surpassed 1`] = `
[
  {
    "level": "error",
    "message": "Limit of 5 random actions exceeded",
    "span": {
      "end": 60,
      "start": 51,
    },
  },
]
`;

exports[`Parser > error nested conditionals 1`] = `
[
  {
    "level": "error",
    "message": "Cannot use a conditional inside of a conditional",
    "span": {
      "end": 14,
      "start": 12,
    },
  },
]
`;

exports[`Parser > error number above integer limit 1`] = `
[
  {
    "level": "error",
    "message": "Number exceeds 64-bit integer limit",
    "span": {
      "end": 40,
      "start": 9,
    },
  },
]
`;

exports[`Parser > parse conditionals 1`] = `
{
  "diagnostics": [
    {
      "level": "error",
      "message": "Expected amount",
      "span": {
        "end": 59,
        "start": 58,
      },
    },
    {
      "level": "error",
      "message": "Expected amount",
      "span": {
        "end": 123,
        "start": 122,
      },
    },
    {
      "level": "error",
      "message": "Expected amount",
      "span": {
        "end": 137,
        "start": 136,
      },
    },
    {
      "level": "error",
      "message": "Expected amount",
      "span": {
        "end": 162,
        "start": 161,
      },
    },
    {
      "level": "error",
      "message": "Expected amount",
      "span": {
        "end": 176,
        "start": 175,
      },
    },
    {
      "level": "error",
      "message": "Expected amount",
      "span": {
        "end": 198,
        "start": 197,
      },
    },
  ],
  "holders": [
    {
      "actions": {
        "span": {
          "end": 278,
          "start": 0,
        },
        "value": [
          {
            "conditions": {
              "span": {
                "end": 5,
                "start": 3,
              },
              "value": [],
            },
            "elseActions": {
              "span": {
                "end": 26,
                "start": 26,
              },
              "value": null,
            },
            "ifActions": {
              "span": {
                "end": 25,
                "start": 6,
              },
              "value": [
                {
                  "kwSpan": {
                    "end": 16,
                    "start": 12,
                  },
                  "message": {
                    "span": {
                      "end": 23,
                      "start": 17,
                    },
                    "value": "true",
                  },
                  "span": {
                    "end": 23,
                    "start": 12,
                  },
                  "type": "MESSAGE",
                },
              ],
            },
            "kwSpan": {
              "end": 2,
              "start": 0,
            },
            "matchAny": {
              "span": {
                "end": 2,
                "start": 3,
              },
              "value": false,
            },
            "span": {
              "end": 26,
              "start": 0,
            },
            "type": "CONDITIONAL",
          },
          {
            "holder": {
              "span": {
                "end": 31,
                "start": 32,
              },
              "value": {
                "type": "player",
              },
            },
            "kwSpan": {
              "end": 31,
              "start": 27,
            },
            "op": {
              "span": {
                "end": 35,
                "start": 34,
              },
              "value": "set",
            },
            "span": {
              "end": 38,
              "start": 27,
            },
            "type": "CHANGE_VAR",
            "value": {
              "span": {
                "end": 38,
                "start": 36,
              },
              "value": 10n,
            },
            "var": {
              "span": {
                "end": 33,
                "start": 32,
              },
              "value": "x",
            },
          },
          {
            "conditions": {
              "span": {
                "end": 59,
                "start": 47,
              },
              "value": [
                {
                  "amount": {
                    "span": {
                      "end": 58,
                      "start": 57,
                    },
                    "value": 5n,
                  },
                  "holder": {
                    "span": {
                      "end": 52,
                      "start": 53,
                    },
                    "value": {
                      "type": "player",
                    },
                  },
                  "inverted": {
                    "span": {
                      "end": 48,
                      "start": 48,
                    },
                    "value": false,
                  },
                  "kwSpan": {
                    "end": 52,
                    "start": 48,
                  },
                  "op": {
                    "span": {
                      "end": 56,
                      "start": 55,
                    },
                    "value": "greater_than",
                  },
                  "span": {
                    "end": 58,
                    "start": 48,
                  },
                  "type": "COMPARE_VAR",
                  "var": {
                    "span": {
                      "end": 54,
                      "start": 53,
                    },
                    "value": "x",
                  },
                },
              ],
            },
            "elseActions": {
              "span": {
                "end": 105,
                "start": 80,
              },
              "value": [
                {
                  "kwSpan": {
                    "end": 95,
                    "start": 91,
                  },
                  "message": {
                    "span": {
                      "end": 103,
                      "start": 96,
                    },
                    "value": "false",
                  },
                  "span": {
                    "end": 103,
                    "start": 91,
                  },
                  "type": "MESSAGE",
                },
              ],
            },
            "ifActions": {
              "span": {
                "end": 79,
                "start": 60,
              },
              "value": [
                {
                  "kwSpan": {
                    "end": 70,
                    "start": 66,
                  },
                  "message": {
                    "span": {
                      "end": 77,
                      "start": 71,
                    },
                    "value": "true",
                  },
                  "span": {
                    "end": 77,
                    "start": 66,
                  },
                  "type": "MESSAGE",
                },
              ],
            },
            "kwSpan": {
              "end": 42,
              "start": 40,
            },
            "matchAny": {
              "span": {
                "end": 46,
                "start": 43,
              },
              "value": false,
            },
            "span": {
              "end": 105,
              "start": 40,
            },
            "type": "CONDITIONAL",
          },
          {
            "conditions": {
              "span": {
                "end": 137,
                "start": 110,
              },
              "value": [
                {
                  "amount": {
                    "span": {
                      "end": 122,
                      "start": 121,
                    },
                    "value": 5n,
                  },
                  "holder": {
                    "span": {
                      "end": 115,
                      "start": 116,
                    },
                    "value": {
                      "type": "player",
                    },
                  },
                  "inverted": {
                    "span": {
                      "end": 111,
                      "start": 111,
                    },
                    "value": false,
                  },
                  "kwSpan": {
                    "end": 115,
                    "start": 111,
                  },
                  "op": {
                    "span": {
                      "end": 120,
                      "start": 118,
                    },
                    "value": "equals",
                  },
                  "span": {
                    "end": 122,
                    "start": 111,
                  },
                  "type": "COMPARE_VAR",
                  "var": {
                    "span": {
                      "end": 117,
                      "start": 116,
                    },
                    "value": "x",
                  },
                },
                {
                  "amount": {
                    "span": {
                      "end": 136,
                      "start": 134,
                    },
                    "value": 10n,
                  },
                  "holder": {
                    "span": {
                      "end": 128,
                      "start": 129,
                    },
                    "value": {
                      "type": "player",
                    },
                  },
                  "inverted": {
                    "span": {
                      "end": 123,
                      "start": 124,
                    },
                    "value": false,
                  },
                  "kwSpan": {
                    "end": 128,
                    "start": 124,
                  },
                  "op": {
                    "span": {
                      "end": 133,
                      "start": 131,
                    },
                    "value": "equals",
                  },
                  "span": {
                    "end": 136,
                    "start": 124,
                  },
                  "type": "COMPARE_VAR",
                  "var": {
                    "span": {
                      "end": 130,
                      "start": 129,
                    },
                    "value": "y",
                  },
                },
              ],
            },
            "elseActions": {
              "span": {
                "end": 143,
                "start": 143,
              },
              "value": null,
            },
            "ifActions": {
              "span": {
                "end": 142,
                "start": 138,
              },
              "value": [],
            },
            "kwSpan": {
              "end": 109,
              "start": 107,
            },
            "matchAny": {
              "span": {
                "end": 109,
                "start": 110,
              },
              "value": false,
            },
            "span": {
              "end": 143,
              "start": 107,
            },
            "type": "CONDITIONAL",
          },
          {
            "conditions": {
              "span": {
                "end": 176,
                "start": 147,
              },
              "value": [
                {
                  "amount": {
                    "span": {
                      "end": 161,
                      "start": 159,
                    },
                    "value": 10n,
                  },
                  "holder": {
                    "span": {
                      "end": 153,
                      "start": 154,
                    },
                    "value": {
                      "type": "player",
                    },
                  },
                  "inverted": {
                    "span": {
                      "end": 149,
                      "start": 148,
                    },
                    "value": true,
                  },
                  "kwSpan": {
                    "end": 153,
                    "start": 149,
                  },
                  "op": {
                    "span": {
                      "end": 158,
                      "start": 156,
                    },
                    "value": "equals",
                  },
                  "span": {
                    "end": 161,
                    "start": 149,
                  },
                  "type": "COMPARE_VAR",
                  "var": {
                    "span": {
                      "end": 155,
                      "start": 154,
                    },
                    "value": "x",
                  },
                },
                {
                  "amount": {
                    "span": {
                      "end": 175,
                      "start": 174,
                    },
                    "value": 5n,
                  },
                  "holder": {
                    "span": {
                      "end": 168,
                      "start": 169,
                    },
                    "value": {
                      "type": "player",
                    },
                  },
                  "inverted": {
                    "span": {
                      "end": 164,
                      "start": 163,
                    },
                    "value": true,
                  },
                  "kwSpan": {
                    "end": 168,
                    "start": 164,
                  },
                  "op": {
                    "span": {
                      "end": 173,
                      "start": 171,
                    },
                    "value": "equals",
                  },
                  "span": {
                    "end": 175,
                    "start": 164,
                  },
                  "type": "COMPARE_VAR",
                  "var": {
                    "span": {
                      "end": 170,
                      "start": 169,
                    },
                    "value": "y",
                  },
                },
              ],
            },
            "elseActions": {
              "span": {
                "end": 182,
                "start": 182,
              },
              "value": null,
            },
            "ifActions": {
              "span": {
                "end": 181,
                "start": 177,
              },
              "value": [],
            },
            "kwSpan": {
              "end": 146,
              "start": 144,
            },
            "matchAny": {
              "span": {
                "end": 146,
                "start": 147,
              },
              "value": false,
            },
            "span": {
              "end": 182,
              "start": 144,
            },
            "type": "CONDITIONAL",
          },
          {
            "conditions": {
              "span": {
                "end": 198,
                "start": 186,
              },
              "value": [
                {
                  "amount": {
                    "span": {
                      "end": 197,
                      "start": 196,
                    },
                    "value": 5n,
                  },
                  "holder": {
                    "span": {
                      "end": 191,
                      "start": 192,
                    },
                    "value": {
                      "type": "player",
                    },
                  },
                  "inverted": {
                    "span": {
                      "end": 187,
                      "start": 187,
                    },
                    "value": false,
                  },
                  "kwSpan": {
                    "end": 191,
                    "start": 187,
                  },
                  "op": {
                    "span": {
                      "end": 195,
                      "start": 194,
                    },
                    "value": "less_than",
                  },
                  "span": {
                    "end": 197,
                    "start": 187,
                  },
                  "type": "COMPARE_VAR",
                  "var": {
                    "span": {
                      "end": 193,
                      "start": 192,
                    },
                    "value": "x",
                  },
                },
              ],
            },
            "elseActions": {
              "span": {
                "end": 236,
                "start": 215,
              },
              "value": [
                {
                  "kwSpan": {
                    "end": 226,
                    "start": 222,
                  },
                  "message": {
                    "span": {
                      "end": 234,
                      "start": 227,
                    },
                    "value": "false",
                  },
                  "span": {
                    "end": 234,
                    "start": 222,
                  },
                  "type": "MESSAGE",
                },
              ],
            },
            "ifActions": {
              "span": {
                "end": 214,
                "start": 199,
              },
              "value": [
                {
                  "kwSpan": {
                    "end": 205,
                    "start": 201,
                  },
                  "message": {
                    "span": {
                      "end": 212,
                      "start": 206,
                    },
                    "value": "true",
                  },
                  "span": {
                    "end": 212,
                    "start": 201,
                  },
                  "type": "MESSAGE",
                },
              ],
            },
            "kwSpan": {
              "end": 185,
              "start": 183,
            },
            "matchAny": {
              "span": {
                "end": 185,
                "start": 186,
              },
              "value": false,
            },
            "span": {
              "end": 236,
              "start": 183,
            },
            "type": "CONDITIONAL",
          },
          {
            "conditions": {
              "span": {
                "end": 246,
                "start": 244,
              },
              "value": [],
            },
            "elseActions": {
              "span": {
                "end": 250,
                "start": 250,
              },
              "value": null,
            },
            "ifActions": {
              "span": {
                "end": 249,
                "start": 247,
              },
              "value": [],
            },
            "kwSpan": {
              "end": 240,
              "start": 238,
            },
            "matchAny": {
              "span": {
                "end": 243,
                "start": 241,
              },
              "value": true,
            },
            "span": {
              "end": 250,
              "start": 238,
            },
            "type": "CONDITIONAL",
          },
          {
            "conditions": {
              "span": {
                "end": 260,
                "start": 258,
              },
              "value": [],
            },
            "elseActions": {
              "span": {
                "end": 264,
                "start": 264,
              },
              "value": null,
            },
            "ifActions": {
              "span": {
                "end": 263,
                "start": 261,
              },
              "value": [],
            },
            "kwSpan": {
              "end": 252,
              "start": 250,
            },
            "matchAny": {
              "span": {
                "end": 257,
                "start": 253,
              },
              "value": true,
            },
            "span": {
              "end": 264,
              "start": 250,
            },
            "type": "CONDITIONAL",
          },
          {
            "conditions": {
              "span": {
                "end": 275,
                "start": 273,
              },
              "value": [],
            },
            "elseActions": {
              "span": {
                "end": 278,
                "start": 278,
              },
              "value": null,
            },
            "ifActions": {
              "span": {
                "end": 278,
                "start": 276,
              },
              "value": [],
            },
            "kwSpan": {
              "end": 266,
              "start": 264,
            },
            "matchAny": {
              "span": {
                "end": 272,
                "start": 267,
              },
              "value": false,
            },
            "span": {
              "end": 278,
              "start": 264,
            },
            "type": "CONDITIONAL",
          },
        ],
      },
      "kwSpan": {
        "end": 0,
        "start": 0,
      },
      "span": {
        "end": 278,
        "start": 0,
      },
      "type": "UNKNOWN",
    },
  ],
}
`;

exports[`Parser > parse global stats 1`] = `
{
  "diagnostics": [
    {
      "level": "error",
      "message": "expected true/false value",
      "span": {
        "end": 76,
        "start": 76,
      },
    },
  ],
  "holders": [
    {
      "actions": {
        "span": {
          "end": 76,
          "start": 0,
        },
        "value": [
          {
            "holder": {
              "span": {
                "end": 10,
                "start": 11,
              },
              "value": {
                "type": "global",
              },
            },
            "kwSpan": {
              "end": 10,
              "start": 0,
            },
            "op": {
              "span": {
                "end": 14,
                "start": 13,
              },
              "value": "set",
            },
            "span": {
              "end": 16,
              "start": 0,
            },
            "type": "CHANGE_VAR",
            "value": {
              "span": {
                "end": 16,
                "start": 15,
              },
              "value": 5n,
            },
            "var": {
              "span": {
                "end": 12,
                "start": 11,
              },
              "value": "x",
            },
          },
          {
            "holder": {
              "span": {
                "end": 27,
                "start": 28,
              },
              "value": {
                "type": "global",
              },
            },
            "kwSpan": {
              "end": 27,
              "start": 17,
            },
            "op": {
              "span": {
                "end": 31,
                "start": 30,
              },
              "value": "set",
            },
            "span": {
              "end": 44,
              "start": 17,
            },
            "type": "CHANGE_VAR",
            "value": {
              "span": {
                "end": 44,
                "start": 32,
              },
              "value": "%stat.global/x%",
            },
            "var": {
              "span": {
                "end": 29,
                "start": 28,
              },
              "value": "y",
            },
          },
          {
            "holder": {
              "span": {
                "end": 55,
                "start": 56,
              },
              "value": {
                "type": "global",
              },
            },
            "kwSpan": {
              "end": 55,
              "start": 45,
            },
            "op": {
              "span": {
                "end": 59,
                "start": 58,
              },
              "value": "set",
            },
            "span": {
              "end": 76,
              "start": 45,
            },
            "type": "CHANGE_VAR",
            "value": {
              "span": {
                "end": 76,
                "start": 60,
              },
              "value": "%stat.global/y%",
            },
            "var": {
              "span": {
                "end": 57,
                "start": 56,
              },
              "value": "z",
            },
          },
        ],
      },
      "kwSpan": {
        "end": 0,
        "start": 0,
      },
      "span": {
        "end": 76,
        "start": 0,
      },
      "type": "UNKNOWN",
    },
  ],
}
`;

exports[`Parser > parse omitted fields 1`] = `
{
  "diagnostics": [],
  "holders": [
    {
      "actions": {
        "span": {
          "end": 138,
          "start": 0,
        },
        "value": [
          {
            "kwSpan": {
              "end": 5,
              "start": 0,
            },
            "span": {
              "end": 14,
              "start": 0,
            },
            "title": {
              "span": {
                "end": 14,
                "start": 6,
              },
              "value": "Hello!",
            },
            "type": "TITLE",
          },
          {
            "kwSpan": {
              "end": 20,
              "start": 15,
            },
            "span": {
              "end": 54,
              "start": 15,
            },
            "subtitle": {
              "span": {
                "end": 54,
                "start": 37,
              },
              "value": "Goodbye, world!",
            },
            "title": {
              "span": {
                "end": 36,
                "start": 21,
              },
              "value": "Hello, World!",
            },
            "type": "TITLE",
          },
          {
            "fadein": {
              "span": {
                "end": 81,
                "start": 80,
              },
              "value": 1,
            },
            "fadeout": {
              "span": {
                "end": 85,
                "start": 84,
              },
              "value": 1,
            },
            "kwSpan": {
              "end": 60,
              "start": 55,
            },
            "span": {
              "end": 85,
              "start": 55,
            },
            "stay": {
              "span": {
                "end": 83,
                "start": 82,
              },
              "value": 5,
            },
            "subtitle": {
              "span": {
                "end": 79,
                "start": 69,
              },
              "value": "Subtitle",
            },
            "title": {
              "span": {
                "end": 68,
                "start": 61,
              },
              "value": "Title",
            },
            "type": "TITLE",
          },
          {
            "function": {
              "span": {
                "end": 111,
                "start": 96,
              },
              "value": "MyFunction :)",
            },
            "global": {
              "span": {
                "end": 111,
                "start": 111,
              },
              "value": null,
            },
            "kwSpan": {
              "end": 95,
              "start": 87,
            },
            "span": {
              "end": 111,
              "start": 87,
            },
            "type": "FUNCTION",
          },
          {
            "function": {
              "span": {
                "end": 133,
                "start": 121,
              },
              "value": "MyFunction",
            },
            "global": {
              "span": {
                "end": 138,
                "start": 134,
              },
              "value": true,
            },
            "kwSpan": {
              "end": 120,
              "start": 112,
            },
            "span": {
              "end": 138,
              "start": 112,
            },
            "type": "FUNCTION",
          },
        ],
      },
      "kwSpan": {
        "end": 0,
        "start": 0,
      },
      "span": {
        "end": 138,
        "start": 0,
      },
      "type": "UNKNOWN",
    },
  ],
}
`;

exports[`Parser > parse placeholders 1`] = `
{
  "diagnostics": [],
  "holders": [
    {
      "actions": {
        "span": {
          "end": 666,
          "start": 0,
        },
        "value": [
          {
            "holder": {
              "span": {
                "end": 4,
                "start": 5,
              },
              "value": {
                "type": "player",
              },
            },
            "kwSpan": {
              "end": 4,
              "start": 0,
            },
            "op": {
              "span": {
                "end": 8,
                "start": 7,
              },
              "value": "set",
            },
            "span": {
              "end": 22,
              "start": 0,
            },
            "type": "CHANGE_VAR",
            "value": {
              "span": {
                "end": 22,
                "start": 9,
              },
              "value": "%player.ping%",
            },
            "var": {
              "span": {
                "end": 6,
                "start": 5,
              },
              "value": "x",
            },
          },
          {
            "holder": {
              "span": {
                "end": 27,
                "start": 28,
              },
              "value": {
                "type": "player",
              },
            },
            "kwSpan": {
              "end": 27,
              "start": 23,
            },
            "op": {
              "span": {
                "end": 31,
                "start": 30,
              },
              "value": "set",
            },
            "span": {
              "end": 47,
              "start": 23,
            },
            "type": "CHANGE_VAR",
            "value": {
              "span": {
                "end": 47,
                "start": 32,
              },
              "value": "%player.health%",
            },
            "var": {
              "span": {
                "end": 29,
                "start": 28,
              },
              "value": "x",
            },
          },
          {
            "holder": {
              "span": {
                "end": 52,
                "start": 53,
              },
              "value": {
                "type": "player",
              },
            },
            "kwSpan": {
              "end": 52,
              "start": 48,
            },
            "op": {
              "span": {
                "end": 56,
                "start": 55,
              },
              "value": "set",
            },
            "span": {
              "end": 75,
              "start": 48,
            },
            "type": "CHANGE_VAR",
            "value": {
              "span": {
                "end": 75,
                "start": 57,
              },
              "value": "%player.maxhealth%",
            },
            "var": {
              "span": {
                "end": 54,
                "start": 53,
              },
              "value": "x",
            },
          },
          {
            "holder": {
              "span": {
                "end": 80,
                "start": 81,
              },
              "value": {
                "type": "player",
              },
            },
            "kwSpan": {
              "end": 80,
              "start": 76,
            },
            "op": {
              "span": {
                "end": 84,
                "start": 83,
              },
              "value": "set",
            },
            "span": {
              "end": 100,
              "start": 76,
            },
            "type": "CHANGE_VAR",
            "value": {
              "span": {
                "end": 100,
                "start": 85,
              },
              "value": "%player.hunger%",
            },
            "var": {
              "span": {
                "end": 82,
                "start": 81,
              },
              "value": "x",
            },
          },
          {
            "holder": {
              "span": {
                "end": 105,
                "start": 106,
              },
              "value": {
                "type": "player",
              },
            },
            "kwSpan": {
              "end": 105,
              "start": 101,
            },
            "op": {
              "span": {
                "end": 109,
                "start": 108,
              },
              "value": "set",
            },
            "span": {
              "end": 129,
              "start": 101,
            },
            "type": "CHANGE_VAR",
            "value": {
              "span": {
                "end": 129,
                "start": 110,
              },
              "value": "%player.experience%",
            },
            "var": {
              "span": {
                "end": 107,
                "start": 106,
              },
              "value": "x",
            },
          },
          {
            "holder": {
              "span": {
                "end": 134,
                "start": 135,
              },
              "value": {
                "type": "player",
              },
            },
            "kwSpan": {
              "end": 134,
              "start": 130,
            },
            "op": {
              "span": {
                "end": 138,
                "start": 137,
              },
              "value": "set",
            },
            "span": {
              "end": 153,
              "start": 130,
            },
            "type": "CHANGE_VAR",
            "value": {
              "span": {
                "end": 153,
                "start": 139,
              },
              "value": "%player.level%",
            },
            "var": {
              "span": {
                "end": 136,
                "start": 135,
              },
              "value": "x",
            },
          },
          {
            "holder": {
              "span": {
                "end": 158,
                "start": 159,
              },
              "value": {
                "type": "player",
              },
            },
            "kwSpan": {
              "end": 158,
              "start": 154,
            },
            "op": {
              "span": {
                "end": 162,
                "start": 161,
              },
              "value": "set",
            },
            "span": {
              "end": 180,
              "start": 154,
            },
            "type": "CHANGE_VAR",
            "value": {
              "span": {
                "end": 180,
                "start": 163,
              },
              "value": "%player.protocol%",
            },
            "var": {
              "span": {
                "end": 160,
                "start": 159,
              },
              "value": "x",
            },
          },
          {
            "holder": {
              "span": {
                "end": 185,
                "start": 186,
              },
              "value": {
                "type": "player",
              },
            },
            "kwSpan": {
              "end": 185,
              "start": 181,
            },
            "op": {
              "span": {
                "end": 189,
                "start": 188,
              },
              "value": "set",
            },
            "span": {
              "end": 209,
              "start": 181,
            },
            "type": "CHANGE_VAR",
            "value": {
              "span": {
                "end": 209,
                "start": 190,
              },
              "value": "%player.location.x%",
            },
            "var": {
              "span": {
                "end": 187,
                "start": 186,
              },
              "value": "x",
            },
          },
          {
            "holder": {
              "span": {
                "end": 214,
                "start": 215,
              },
              "value": {
                "type": "player",
              },
            },
            "kwSpan": {
              "end": 214,
              "start": 210,
            },
            "op": {
              "span": {
                "end": 218,
                "start": 217,
              },
              "value": "set",
            },
            "span": {
              "end": 238,
              "start": 210,
            },
            "type": "CHANGE_VAR",
            "value": {
              "span": {
                "end": 238,
                "start": 219,
              },
              "value": "%player.location.y%",
            },
            "var": {
              "span": {
                "end": 216,
                "start": 215,
              },
              "value": "x",
            },
          },
          {
            "holder": {
              "span": {
                "end": 243,
                "start": 244,
              },
              "value": {
                "type": "player",
              },
            },
            "kwSpan": {
              "end": 243,
              "start": 239,
            },
            "op": {
              "span": {
                "end": 247,
                "start": 246,
              },
              "value": "set",
            },
            "span": {
              "end": 267,
              "start": 239,
            },
            "type": "CHANGE_VAR",
            "value": {
              "span": {
                "end": 267,
                "start": 248,
              },
              "value": "%player.location.z%",
            },
            "var": {
              "span": {
                "end": 245,
                "start": 244,
              },
              "value": "x",
            },
          },
          {
            "conditions": {
              "span": {
                "end": 274,
                "start": 272,
              },
              "value": [],
            },
            "elseActions": {
              "span": {
                "end": 593,
                "start": 593,
              },
              "value": null,
            },
            "ifActions": {
              "span": {
                "end": 592,
                "start": 275,
              },
              "value": [
                {
                  "holder": {
                    "span": {
                      "end": 285,
                      "start": 286,
                    },
                    "value": {
                      "type": "player",
                    },
                  },
                  "kwSpan": {
                    "end": 285,
                    "start": 281,
                  },
                  "op": {
                    "span": {
                      "end": 289,
                      "start": 288,
                    },
                    "value": "set",
                  },
                  "span": {
                    "end": 313,
                    "start": 281,
                  },
                  "type": "CHANGE_VAR",
                  "value": {
                    "span": {
                      "end": 313,
                      "start": 290,
                    },
                    "value": "%player.location.pitch%",
                  },
                  "var": {
                    "span": {
                      "end": 287,
                      "start": 286,
                    },
                    "value": "x",
                  },
                },
                {
                  "holder": {
                    "span": {
                      "end": 322,
                      "start": 323,
                    },
                    "value": {
                      "type": "player",
                    },
                  },
                  "kwSpan": {
                    "end": 322,
                    "start": 318,
                  },
                  "op": {
                    "span": {
                      "end": 326,
                      "start": 325,
                    },
                    "value": "set",
                  },
                  "span": {
                    "end": 348,
                    "start": 318,
                  },
                  "type": "CHANGE_VAR",
                  "value": {
                    "span": {
                      "end": 348,
                      "start": 327,
                    },
                    "value": "%player.location.yaw%",
                  },
                  "var": {
                    "span": {
                      "end": 324,
                      "start": 323,
                    },
                    "value": "x",
                  },
                },
                {
                  "holder": {
                    "span": {
                      "end": 357,
                      "start": 358,
                    },
                    "value": {
                      "type": "player",
                    },
                  },
                  "kwSpan": {
                    "end": 357,
                    "start": 353,
                  },
                  "op": {
                    "span": {
                      "end": 361,
                      "start": 360,
                    },
                    "value": "set",
                  },
                  "span": {
                    "end": 385,
                    "start": 353,
                  },
                  "type": "CHANGE_VAR",
                  "value": {
                    "span": {
                      "end": 385,
                      "start": 362,
                    },
                    "value": "%player.group.priority%",
                  },
                  "var": {
                    "span": {
                      "end": 359,
                      "start": 358,
                    },
                    "value": "x",
                  },
                },
                {
                  "holder": {
                    "span": {
                      "end": 394,
                      "start": 395,
                    },
                    "value": {
                      "type": "player",
                    },
                  },
                  "kwSpan": {
                    "end": 394,
                    "start": 390,
                  },
                  "op": {
                    "span": {
                      "end": 398,
                      "start": 397,
                    },
                    "value": "set",
                  },
                  "span": {
                    "end": 421,
                    "start": 390,
                  },
                  "type": "CHANGE_VAR",
                  "value": {
                    "span": {
                      "end": 421,
                      "start": 399,
                    },
                    "value": "%player.parkour.ticks%",
                  },
                  "var": {
                    "span": {
                      "end": 396,
                      "start": 395,
                    },
                    "value": "x",
                  },
                },
                {
                  "holder": {
                    "span": {
                      "end": 430,
                      "start": 431,
                    },
                    "value": {
                      "type": "player",
                    },
                  },
                  "kwSpan": {
                    "end": 430,
                    "start": 426,
                  },
                  "op": {
                    "span": {
                      "end": 434,
                      "start": 433,
                    },
                    "value": "set",
                  },
                  "span": {
                    "end": 449,
                    "start": 426,
                  },
                  "type": "CHANGE_VAR",
                  "value": {
                    "span": {
                      "end": 449,
                      "start": 435,
                    },
                    "value": "%house.guests%",
                  },
                  "var": {
                    "span": {
                      "end": 432,
                      "start": 431,
                    },
                    "value": "x",
                  },
                },
                {
                  "holder": {
                    "span": {
                      "end": 458,
                      "start": 459,
                    },
                    "value": {
                      "type": "player",
                    },
                  },
                  "kwSpan": {
                    "end": 458,
                    "start": 454,
                  },
                  "op": {
                    "span": {
                      "end": 462,
                      "start": 461,
                    },
                    "value": "set",
                  },
                  "span": {
                    "end": 478,
                    "start": 454,
                  },
                  "type": "CHANGE_VAR",
                  "value": {
                    "span": {
                      "end": 478,
                      "start": 463,
                    },
                    "value": "%house.cookies%",
                  },
                  "var": {
                    "span": {
                      "end": 460,
                      "start": 459,
                    },
                    "value": "x",
                  },
                },
                {
                  "holder": {
                    "span": {
                      "end": 487,
                      "start": 488,
                    },
                    "value": {
                      "type": "player",
                    },
                  },
                  "kwSpan": {
                    "end": 487,
                    "start": 483,
                  },
                  "op": {
                    "span": {
                      "end": 491,
                      "start": 490,
                    },
                    "value": "set",
                  },
                  "span": {
                    "end": 507,
                    "start": 483,
                  },
                  "type": "CHANGE_VAR",
                  "value": {
                    "span": {
                      "end": 507,
                      "start": 492,
                    },
                    "value": "%house.players%",
                  },
                  "var": {
                    "span": {
                      "end": 489,
                      "start": 488,
                    },
                    "value": "x",
                  },
                },
                {
                  "holder": {
                    "span": {
                      "end": 516,
                      "start": 517,
                    },
                    "value": {
                      "type": "player",
                    },
                  },
                  "kwSpan": {
                    "end": 516,
                    "start": 512,
                  },
                  "op": {
                    "span": {
                      "end": 520,
                      "start": 519,
                    },
                    "value": "set",
                  },
                  "span": {
                    "end": 532,
                    "start": 512,
                  },
                  "type": "CHANGE_VAR",
                  "value": {
                    "span": {
                      "end": 532,
                      "start": 521,
                    },
                    "value": "%date.unix%",
                  },
                  "var": {
                    "span": {
                      "end": 518,
                      "start": 517,
                    },
                    "value": "x",
                  },
                },
                {
                  "holder": {
                    "span": {
                      "end": 541,
                      "start": 542,
                    },
                    "value": {
                      "type": "player",
                    },
                  },
                  "kwSpan": {
                    "end": 541,
                    "start": 537,
                  },
                  "op": {
                    "span": {
                      "end": 545,
                      "start": 544,
                    },
                    "value": "set",
                  },
                  "span": {
                    "end": 561,
                    "start": 537,
                  },
                  "type": "CHANGE_VAR",
                  "value": {
                    "span": {
                      "end": 561,
                      "start": 546,
                    },
                    "value": "%stat.player/x%",
                  },
                  "var": {
                    "span": {
                      "end": 543,
                      "start": 542,
                    },
                    "value": "x",
                  },
                },
                {
                  "holder": {
                    "span": {
                      "end": 570,
                      "start": 571,
                    },
                    "value": {
                      "type": "player",
                    },
                  },
                  "kwSpan": {
                    "end": 570,
                    "start": 566,
                  },
                  "op": {
                    "span": {
                      "end": 574,
                      "start": 573,
                    },
                    "value": "set",
                  },
                  "span": {
                    "end": 590,
                    "start": 566,
                  },
                  "type": "CHANGE_VAR",
                  "value": {
                    "span": {
                      "end": 590,
                      "start": 575,
                    },
                    "value": "%stat.global/x%",
                  },
                  "var": {
                    "span": {
                      "end": 572,
                      "start": 571,
                    },
                    "value": "x",
                  },
                },
              ],
            },
            "kwSpan": {
              "end": 271,
              "start": 269,
            },
            "matchAny": {
              "span": {
                "end": 271,
                "start": 272,
              },
              "value": false,
            },
            "span": {
              "end": 593,
              "start": 269,
            },
            "type": "CONDITIONAL",
          },
          {
            "conditions": {
              "span": {
                "end": 599,
                "start": 597,
              },
              "value": [],
            },
            "elseActions": {
              "span": {
                "end": 666,
                "start": 666,
              },
              "value": null,
            },
            "ifActions": {
              "span": {
                "end": 666,
                "start": 600,
              },
              "value": [
                {
                  "holder": {
                    "span": {
                      "end": 610,
                      "start": 611,
                    },
                    "value": {
                      "type": "player",
                    },
                  },
                  "kwSpan": {
                    "end": 610,
                    "start": 606,
                  },
                  "op": {
                    "span": {
                      "end": 614,
                      "start": 613,
                    },
                    "value": "set",
                  },
                  "span": {
                    "end": 633,
                    "start": 606,
                  },
                  "type": "CHANGE_VAR",
                  "value": {
                    "span": {
                      "end": 633,
                      "start": 615,
                    },
                    "value": "%stat.team/x team%",
                  },
                  "var": {
                    "span": {
                      "end": 612,
                      "start": 611,
                    },
                    "value": "x",
                  },
                },
                {
                  "holder": {
                    "span": {
                      "end": 642,
                      "start": 643,
                    },
                    "value": {
                      "type": "player",
                    },
                  },
                  "kwSpan": {
                    "end": 642,
                    "start": 638,
                  },
                  "op": {
                    "span": {
                      "end": 646,
                      "start": 645,
                    },
                    "value": "set",
                  },
                  "span": {
                    "end": 664,
                    "start": 638,
                  },
                  "type": "CHANGE_VAR",
                  "value": {
                    "span": {
                      "end": 664,
                      "start": 647,
                    },
                    "value": "%random.int/1 10%",
                  },
                  "var": {
                    "span": {
                      "end": 644,
                      "start": 643,
                    },
                    "value": "x",
                  },
                },
              ],
            },
            "kwSpan": {
              "end": 596,
              "start": 594,
            },
            "matchAny": {
              "span": {
                "end": 596,
                "start": 597,
              },
              "value": false,
            },
            "span": {
              "end": 666,
              "start": 594,
            },
            "type": "CONDITIONAL",
          },
        ],
      },
      "kwSpan": {
        "end": 0,
        "start": 0,
      },
      "span": {
        "end": 666,
        "start": 0,
      },
      "type": "UNKNOWN",
    },
  ],
}
`;

exports[`Parser > parse player stats 1`] = `
{
  "diagnostics": [
    {
      "level": "error",
      "message": "expected true/false value",
      "span": {
        "end": 52,
        "start": 52,
      },
    },
  ],
  "holders": [
    {
      "actions": {
        "span": {
          "end": 52,
          "start": 0,
        },
        "value": [
          {
            "holder": {
              "span": {
                "end": 4,
                "start": 5,
              },
              "value": {
                "type": "player",
              },
            },
            "kwSpan": {
              "end": 4,
              "start": 0,
            },
            "op": {
              "span": {
                "end": 8,
                "start": 7,
              },
              "value": "set",
            },
            "span": {
              "end": 10,
              "start": 0,
            },
            "type": "CHANGE_VAR",
            "value": {
              "span": {
                "end": 10,
                "start": 9,
              },
              "value": 5n,
            },
            "var": {
              "span": {
                "end": 6,
                "start": 5,
              },
              "value": "x",
            },
          },
          {
            "holder": {
              "span": {
                "end": 15,
                "start": 16,
              },
              "value": {
                "type": "player",
              },
            },
            "kwSpan": {
              "end": 15,
              "start": 11,
            },
            "op": {
              "span": {
                "end": 19,
                "start": 18,
              },
              "value": "set",
            },
            "span": {
              "end": 26,
              "start": 11,
            },
            "type": "CHANGE_VAR",
            "value": {
              "span": {
                "end": 26,
                "start": 20,
              },
              "value": "%stat.player/x%",
            },
            "var": {
              "span": {
                "end": 17,
                "start": 16,
              },
              "value": "y",
            },
          },
          {
            "holder": {
              "span": {
                "end": 31,
                "start": 32,
              },
              "value": {
                "type": "player",
              },
            },
            "kwSpan": {
              "end": 31,
              "start": 27,
            },
            "op": {
              "span": {
                "end": 35,
                "start": 34,
              },
              "value": "set",
            },
            "span": {
              "end": 52,
              "start": 27,
            },
            "type": "CHANGE_VAR",
            "value": {
              "span": {
                "end": 52,
                "start": 36,
              },
              "value": "%stat.player/y%",
            },
            "var": {
              "span": {
                "end": 33,
                "start": 32,
              },
              "value": "z",
            },
          },
        ],
      },
      "kwSpan": {
        "end": 0,
        "start": 0,
      },
      "span": {
        "end": 52,
        "start": 0,
      },
      "type": "UNKNOWN",
    },
  ],
}
`;

exports[`Parser > parse shorthands 1`] = `
{
  "diagnostics": [],
  "holders": [
    {
      "actions": {
        "span": {
          "end": 209,
          "start": 0,
        },
        "value": [
          {
            "holder": {
              "span": {
                "end": 4,
                "start": 5,
              },
              "value": {
                "type": "player",
              },
            },
            "kwSpan": {
              "end": 4,
              "start": 0,
            },
            "op": {
              "span": {
                "end": 8,
                "start": 7,
              },
              "value": "set",
            },
            "span": {
              "end": 15,
              "start": 0,
            },
            "type": "CHANGE_VAR",
            "value": {
              "span": {
                "end": 15,
                "start": 9,
              },
              "value": "%stat.player/y%",
            },
            "var": {
              "span": {
                "end": 6,
                "start": 5,
              },
              "value": "x",
            },
          },
          {
            "holder": {
              "span": {
                "end": 20,
                "start": 21,
              },
              "value": {
                "type": "player",
              },
            },
            "kwSpan": {
              "end": 20,
              "start": 16,
            },
            "op": {
              "span": {
                "end": 24,
                "start": 23,
              },
              "value": "set",
            },
            "span": {
              "end": 37,
              "start": 16,
            },
            "type": "CHANGE_VAR",
            "value": {
              "span": {
                "end": 37,
                "start": 25,
              },
              "value": "%stat.global/y%",
            },
            "var": {
              "span": {
                "end": 22,
                "start": 21,
              },
              "value": "x",
            },
          },
          {
            "holder": {
              "span": {
                "end": 42,
                "start": 43,
              },
              "value": {
                "type": "player",
              },
            },
            "kwSpan": {
              "end": 42,
              "start": 38,
            },
            "op": {
              "span": {
                "end": 46,
                "start": 45,
              },
              "value": "set",
            },
            "span": {
              "end": 62,
              "start": 38,
            },
            "type": "CHANGE_VAR",
            "value": {
              "span": {
                "end": 62,
                "start": 47,
              },
              "value": "%stat.team/y team%",
            },
            "var": {
              "span": {
                "end": 44,
                "start": 43,
              },
              "value": "x",
            },
          },
          {
            "holder": {
              "span": {
                "end": 67,
                "start": 68,
              },
              "value": {
                "type": "player",
              },
            },
            "kwSpan": {
              "end": 67,
              "start": 63,
            },
            "op": {
              "span": {
                "end": 71,
                "start": 70,
              },
              "value": "set",
            },
            "span": {
              "end": 87,
              "start": 63,
            },
            "type": "CHANGE_VAR",
            "value": {
              "span": {
                "end": 87,
                "start": 72,
              },
              "value": "%random.int/1 100%",
            },
            "var": {
              "span": {
                "end": 69,
                "start": 68,
              },
              "value": "x",
            },
          },
          {
            "holder": {
              "span": {
                "end": 92,
                "start": 93,
              },
              "value": {
                "type": "player",
              },
            },
            "kwSpan": {
              "end": 92,
              "start": 88,
            },
            "op": {
              "span": {
                "end": 96,
                "start": 95,
              },
              "value": "set",
            },
            "span": {
              "end": 103,
              "start": 88,
            },
            "type": "CHANGE_VAR",
            "value": {
              "span": {
                "end": 103,
                "start": 97,
              },
              "value": "%player.health%",
            },
            "var": {
              "span": {
                "end": 94,
                "start": 93,
              },
              "value": "x",
            },
          },
          {
            "holder": {
              "span": {
                "end": 108,
                "start": 109,
              },
              "value": {
                "type": "player",
              },
            },
            "kwSpan": {
              "end": 108,
              "start": 104,
            },
            "op": {
              "span": {
                "end": 112,
                "start": 111,
              },
              "value": "set",
            },
            "span": {
              "end": 122,
              "start": 104,
            },
            "type": "CHANGE_VAR",
            "value": {
              "span": {
                "end": 122,
                "start": 113,
              },
              "value": "%player.maxHealth%",
            },
            "var": {
              "span": {
                "end": 110,
                "start": 109,
              },
              "value": "x",
            },
          },
          {
            "holder": {
              "span": {
                "end": 127,
                "start": 128,
              },
              "value": {
                "type": "player",
              },
            },
            "kwSpan": {
              "end": 127,
              "start": 123,
            },
            "op": {
              "span": {
                "end": 131,
                "start": 130,
              },
              "value": "set",
            },
            "span": {
              "end": 138,
              "start": 123,
            },
            "type": "CHANGE_VAR",
            "value": {
              "span": {
                "end": 138,
                "start": 132,
              },
              "value": "%player.hunger%",
            },
            "var": {
              "span": {
                "end": 129,
                "start": 128,
              },
              "value": "x",
            },
          },
          {
            "holder": {
              "span": {
                "end": 143,
                "start": 144,
              },
              "value": {
                "type": "player",
              },
            },
            "kwSpan": {
              "end": 143,
              "start": 139,
            },
            "op": {
              "span": {
                "end": 147,
                "start": 146,
              },
              "value": "set",
            },
            "span": {
              "end": 152,
              "start": 139,
            },
            "type": "CHANGE_VAR",
            "value": {
              "span": {
                "end": 152,
                "start": 148,
              },
              "value": "%player.location.x%",
            },
            "var": {
              "span": {
                "end": 145,
                "start": 144,
              },
              "value": "x",
            },
          },
          {
            "holder": {
              "span": {
                "end": 157,
                "start": 158,
              },
              "value": {
                "type": "player",
              },
            },
            "kwSpan": {
              "end": 157,
              "start": 153,
            },
            "op": {
              "span": {
                "end": 161,
                "start": 160,
              },
              "value": "set",
            },
            "span": {
              "end": 166,
              "start": 153,
            },
            "type": "CHANGE_VAR",
            "value": {
              "span": {
                "end": 166,
                "start": 162,
              },
              "value": "%player.location.y%",
            },
            "var": {
              "span": {
                "end": 159,
                "start": 158,
              },
              "value": "x",
            },
          },
          {
            "holder": {
              "span": {
                "end": 171,
                "start": 172,
              },
              "value": {
                "type": "player",
              },
            },
            "kwSpan": {
              "end": 171,
              "start": 167,
            },
            "op": {
              "span": {
                "end": 175,
                "start": 174,
              },
              "value": "set",
            },
            "span": {
              "end": 180,
              "start": 167,
            },
            "type": "CHANGE_VAR",
            "value": {
              "span": {
                "end": 180,
                "start": 176,
              },
              "value": "%player.location.z%",
            },
            "var": {
              "span": {
                "end": 173,
                "start": 172,
              },
              "value": "x",
            },
          },
          {
            "conditions": {
              "span": {
                "end": 187,
                "start": 185,
              },
              "value": [],
            },
            "elseActions": {
              "span": {
                "end": 209,
                "start": 209,
              },
              "value": null,
            },
            "ifActions": {
              "span": {
                "end": 209,
                "start": 188,
              },
              "value": [
                {
                  "holder": {
                    "span": {
                      "end": 198,
                      "start": 199,
                    },
                    "value": {
                      "type": "player",
                    },
                  },
                  "kwSpan": {
                    "end": 198,
                    "start": 194,
                  },
                  "op": {
                    "span": {
                      "end": 202,
                      "start": 201,
                    },
                    "value": "set",
                  },
                  "span": {
                    "end": 207,
                    "start": 194,
                  },
                  "type": "CHANGE_VAR",
                  "value": {
                    "span": {
                      "end": 207,
                      "start": 203,
                    },
                    "value": "%date.unix%",
                  },
                  "var": {
                    "span": {
                      "end": 200,
                      "start": 199,
                    },
                    "value": "x",
                  },
                },
              ],
            },
            "kwSpan": {
              "end": 184,
              "start": 182,
            },
            "matchAny": {
              "span": {
                "end": 184,
                "start": 185,
              },
              "value": false,
            },
            "span": {
              "end": 209,
              "start": 182,
            },
            "type": "CONDITIONAL",
          },
        ],
      },
      "kwSpan": {
        "end": 0,
        "start": 0,
      },
      "span": {
        "end": 209,
        "start": 0,
      },
      "type": "UNKNOWN",
    },
  ],
}
`;

exports[`Parser > parse teleport 1`] = `
{
  "diagnostics": [],
  "holders": [
    {
      "actions": {
        "span": {
          "end": 299,
          "start": 0,
        },
        "value": [
          {
            "kwSpan": {
              "end": 2,
              "start": 0,
            },
            "location": {
              "span": {
                "end": 26,
                "start": 3,
              },
              "value": {
                "type": "location_custom",
                "value": "1 1 1",
              },
            },
            "span": {
              "end": 26,
              "start": 0,
            },
            "type": "TELEPORT",
          },
          {
            "kwSpan": {
              "end": 29,
              "start": 27,
            },
            "location": {
              "span": {
                "end": 58,
                "start": 30,
              },
              "value": {
                "type": "location_custom",
                "value": "-1 1.1 1.1",
              },
            },
            "span": {
              "end": 58,
              "start": 27,
            },
            "type": "TELEPORT",
          },
          {
            "kwSpan": {
              "end": 61,
              "start": 59,
            },
            "location": {
              "span": {
                "end": 85,
                "start": 62,
              },
              "value": {
                "type": "location_custom",
                "value": "1 1 1",
              },
            },
            "span": {
              "end": 85,
              "start": 59,
            },
            "type": "TELEPORT",
          },
          {
            "kwSpan": {
              "end": 89,
              "start": 87,
            },
            "location": {
              "span": {
                "end": 113,
                "start": 90,
              },
              "value": {
                "type": "location_custom",
                "value": "^ ^ ^",
              },
            },
            "span": {
              "end": 113,
              "start": 87,
            },
            "type": "TELEPORT",
          },
          {
            "kwSpan": {
              "end": 116,
              "start": 114,
            },
            "location": {
              "span": {
                "end": 142,
                "start": 117,
              },
              "value": {
                "type": "location_custom",
                "value": "^10 ^ ^",
              },
            },
            "span": {
              "end": 142,
              "start": 114,
            },
            "type": "TELEPORT",
          },
          {
            "conditions": {
              "span": {
                "end": 149,
                "start": 147,
              },
              "value": [],
            },
            "elseActions": {
              "span": {
                "end": 299,
                "start": 299,
              },
              "value": null,
            },
            "ifActions": {
              "span": {
                "end": 299,
                "start": 150,
              },
              "value": [
                {
                  "kwSpan": {
                    "end": 158,
                    "start": 156,
                  },
                  "location": {
                    "span": {
                      "end": 185,
                      "start": 159,
                    },
                    "value": {
                      "type": "location_custom",
                      "value": "~1 ~ 1",
                    },
                  },
                  "span": {
                    "end": 185,
                    "start": 156,
                  },
                  "type": "TELEPORT",
                },
                {
                  "kwSpan": {
                    "end": 192,
                    "start": 190,
                  },
                  "location": {
                    "span": {
                      "end": 218,
                      "start": 193,
                    },
                    "value": {
                      "type": "location_custom",
                      "value": "~ ~ ~",
                    },
                  },
                  "span": {
                    "end": 218,
                    "start": 190,
                  },
                  "type": "TELEPORT",
                },
                {
                  "kwSpan": {
                    "end": 226,
                    "start": 224,
                  },
                  "location": {
                    "span": {
                      "end": 253,
                      "start": 227,
                    },
                    "value": {
                      "type": "location_custom",
                      "value": "1 1 1",
                    },
                  },
                  "span": {
                    "end": 253,
                    "start": 224,
                  },
                  "type": "TELEPORT",
                },
                {
                  "kwSpan": {
                    "end": 260,
                    "start": 258,
                  },
                  "location": {
                    "span": {
                      "end": 272,
                      "start": 261,
                    },
                    "value": {
                      "type": "location_spawn",
                    },
                  },
                  "span": {
                    "end": 272,
                    "start": 258,
                  },
                  "type": "TELEPORT",
                },
                {
                  "kwSpan": {
                    "end": 279,
                    "start": 277,
                  },
                  "location": {
                    "span": {
                      "end": 297,
                      "start": 280,
                    },
                    "value": {
                      "type": "location_invokers",
                    },
                  },
                  "span": {
                    "end": 297,
                    "start": 277,
                  },
                  "type": "TELEPORT",
                },
              ],
            },
            "kwSpan": {
              "end": 146,
              "start": 144,
            },
            "matchAny": {
              "span": {
                "end": 146,
                "start": 147,
              },
              "value": false,
            },
            "span": {
              "end": 299,
              "start": 144,
            },
            "type": "CONDITIONAL",
          },
        ],
      },
      "kwSpan": {
        "end": 0,
        "start": 0,
      },
      "span": {
        "end": 299,
        "start": 0,
      },
      "type": "UNKNOWN",
    },
  ],
}
`;
